# oxid_fenix

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20260616215316_crear_cargos.sql  20260616215325_crear_permisos.sql  20260616215339_crear_cargos_permisos.sql  20260616215349_crear_usuarios.sql  20260715162101_audit_logs.sql
src/: error.rs  lib.rs  main.rs
src/app/: app.rs  error.rs
src/controller/: mod.rs
src/controller/administracion/: cargo.rs  mod.rs  permisos.rs  usuarios.rs
src/controller/sistema/: auth.rs
src/db/: error.rs  mod.rs  postgres.rs
src/models/: audit_logs.rs  cargo.rs  cargos_permisos.rs  mod.rs  permiso.rs  usuario.rs
src/routes/: actions.rs  administracion.rs  dispatcher.rs  mod.rs  protocol.rs
src/routes/administracion/: cargos.rs
src/routes/sistema/: auth.rs  mod.rs
src/security/: password.rs
src/seeds/: cargos.rs  cargos_permisos.rs  error.rs  mod.rs  permisos.rs  usuarios.rs
src/services/: error.rs  mod.rs
src/services/administracion/: cargos.rs  cargos_permisos.rs  mod.rs  permisos.rs  usuarios.rs
src/services/logs/: audit_logs.rs  mod.rs
src/services/sistema/: auth.rs
src/sessions/: error.rs  memory.rs  mod.rs
