[package]
name = "oxid_fenix"
version = "0.1.0"
edition = "2024"
default-run = "oxid_fenix"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
] }
dotenvy = "0.15"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

